web/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  * {
    @apply border-border;
  }
  body {
    @apply bg-background font-mono text-foreground;
  }

  input[type="number"]::-webkit-inner-spin-button,
  input[type="number"]::-webkit-outer-spin-button {
    @apply m-0 appearance-none;
  }
}

@layer base {
  :root {
    --background: 221 23% 95%;
    --foreground: 221 5% 10%;
    --card: 221 23% 97%;
    --card-foreground: 221 5% 15%;
    --popover: 221 23% 97%;
    --popover-foreground: 221 95% 10%;
    --primary: 221 45% 45%;
    --primary-foreground: 0 0% 100%;
    --secondary: 221 45% 85%;
    --secondary-foreground: 221 45% 20%;
    --muted: 183 23% 95%;
    --muted-foreground: 221 5% 40%;
    --accent: 183 23% 90%;
    --accent-foreground: 221 5% 15%;
    --destructive: 0 50% 50%;
    --destructive-foreground: 221 5% 97%;
    --border: 221 23% 88%;
    --input: 221 23% 88%;
    --ring: 221 38% 42%;
    --radius: 0.5rem;
  }

  .dark {
    --background: 221 15% 10%;
    --foreground: 221 5% 90%;
    --card: 221 15% 10%;
    --card-foreground: 221 5% 90%;
    --popover: 221 15% 5%;
    --popover-foreground: 221 5% 90%;
    --primary: 221 87% 76%;
    --primary-foreground: 0 0% 0%;
    --secondary: 221 15% 20%;
    --secondary-foreground: 0 0% 100%;
    --muted: 183 15% 25%;
    --muted-foreground: 221 5% 60%;
    --accent: 183 15% 25%;
    --accent-foreground: 221 5% 90%;
    --destructive: 0 50% 30%;
    --destructive-foreground: 221 5% 90%;
    --border: 221 20% 28%;
    --input: 221 20% 28%;
    --ring: 221 87% 76%;
    --radius: 0.5rem;
  }
}

